--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                         <div>
 
                             <h4>LinkedIn</h4>
-                            <a href="https://linkedin.com/in/vickygaldona" target="_blank" rel="noopener">Victoria Galdona</a>
+                            <a href="https://linkedin.com/in/victoria-galdona-4b5737303?utm_source=share&utm_campaign=share_via&ut-m_content=profile&utm_medium=ios_app" target="_blank" rel="noopener">Victoria Galdona</a>
                         </div>0
                     </div>
                 </div>
